--- a/globalstats.html
+++ b/globalstats.html
@@ -69,6 +69,7 @@
 	  <hr class="star-dark">
 	  <br>
 	  <br>
+	  <center>
 	  <table>
 	  <td>
 	  <center>
@@ -95,6 +96,7 @@
 	  </center>
 	  </td>
 	  </table>
+	  </center>
 	  <br>
 	  <br>
 	  <h2 class="font-weight-bold mb-0">Curated Projects</h2>
@@ -103,6 +105,7 @@
 	  <br>
 	  <h2 class="font-weight-light mb-0" id="curatorname"></h2>
 	  <br>
+	  <center>
 	  <table>
 	  <td>
 	  <center>
@@ -135,12 +138,14 @@
 	  </center>
 	  </td>
 	  </table>
+	  </center>
 	  <br>
 	  <br>
 	  <h2 class="font-weight-bold mb-0">Top Loved Projects</h2>
 	  <hr class="star-dark">
 	  <br>
 	  <br>
+	  <center>
 	  <table>
 	  <td>
 	  <center>
@@ -167,12 +172,14 @@
 	  </center>
 	  </td>
 	  </table>
+	  </center>
 	  <br>
 	  <br>
 	  <h2 class="font-weight-bold mb-0">Top Remixed Projects</h2>
 	  <hr class="star-dark">
 	  <br>
 	  <br>
+	  <center>
 	  <table>
 	  <td>
 	  <center>
@@ -199,12 +206,14 @@
 	  </center>
 	  </td>
 	  </table>
+	  </center>
 	  <br>
 	  <br>
 	  <h2 class="font-weight-bold mb-0">Popular Projects (from Explore)</h2>
 	  <hr class="star-dark">
 	  <br>
 	  <br>
+	  <center>
 	  <table>
 	  <td>
 	  <center>
@@ -230,13 +239,21 @@
 	  <img id="thumb4" style="width: 280px; height: 210px; border-radius: 20px;"></img>
 	  </center>
 	  </td>
+	  <td>
+	  <center>
+	  <p></p>
+	  <h2><a onclick="openscratchtrending()">+</a></h2>
+	  </center>
+	  </td>
 	  </table>
+	  </center>
 	  <br>
 	  <br>
 	  <h2 class="font-weight-bold mb-0">Trending Projects (from Explore)</h2>
 	  <hr class="star-dark">
 	  <br>
 	  <br>
+	  <center>
 	  <table>
 	  <td>
 	  <center>
@@ -262,13 +279,21 @@
 	  <img id="thumb41" style="width: 280px; height: 210px; border-radius: 20px;"></img>
 	  </center>
 	  </td>
+	  <td>
+	  <center>
+	  <p></p>
+	  <h2><a onclick="openscratchpopular()">+</a></h2>
+	  </center>
+	  </td>
 	  </table>
+	  </center>
 	  <br>
 	  <br>
 	  <h2 class="font-weight-bold mb-0">Recent Projects (from Explore)</h2>
 	  <hr class="star-dark">
 	  <br>
 	  <br>
+	  <center>
 	  <table>
 	  <td>
 	  <center>
@@ -294,7 +319,14 @@
 	  <img id="thumb42" style="width: 280px; height: 210px; border-radius: 20px;"></img>
 	  </center>
 	  </td>
+	  <td>
+	  <center>
+	  <p></p>
+	  <h2><a onclick="openscratchpopular()">+</a></h2>
+	  </center>
+	  </td>
 	  </table>
+	  </center>
 	  </center>
 	<header class="masthead bg-primary text-white text-center">
 	</header>
