--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
 	 <img id="thumb31" style="width: 280px; height: 210px; border-radius: 20px;" src="pic3.png"></img>
 	 </center>
 	 </td>
+	 <td>
+	  <center>
+	  <p></p>
+	  <h1><a onclick="openscratchprojects()">+</a></h1>
+	  </center>
+	  </td>
 	 </table>
 	 </center>
 	<br>
@@ -126,6 +132,12 @@
 	  <img id="thumb4" style="width: 60px; height: 60px; border-radius: 20px;"></img>
 	  </center>
 	  </td>
+	  <td>
+	  <center>
+	  <p></p>
+	  <h2><a onclick="openscratchuserfollowing()">+</a></h2>
+	  </center>
+	  </td>
 	  </table>
 	  </center>
 	  <br>
@@ -165,6 +177,12 @@
 	  <img id="thum24" style="width: 60px; height: 60px; border-radius: 20px;"></img>
 	  </center>
 	  </td>
+	  <td>
+	  <center>
+	  <p></p>
+	  <h2><a onclick="openscratchuserfollowers()">+</a></h2>
+	  </center>
+	  </td>
 	  </table>
 	  </center>
 	  <br>
@@ -192,8 +210,8 @@
 	<div id="id01" class="modal animate-opacity">
 	    <div class="modal-content card-4">
 		   <header class="cont teal">
-		   <span onclick="document.getElementById('id01').style.display='none'" class="button large display-topright">&times;</span>
 		   <h2 class="font-weight-light mb-0">Enter Scratcher Username</h2>
+		   <span onclick="document.getElementById('id01').style.display='none'" class="button display-topright">&times;</span>
 		   </header>
 		   <div class="cont light-grey">
 		   <input id="user" class="input animate-input" style="border:0!important; width:30%;" type="text" value="griffpatch" placeholder="griffpatch" required>
