--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="style.css">
   </head>
 
-  <body id="page-top" onload="myFunction("griffpatch")">
+  <body id="page-top" onload="myFunction("griffpatch");">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
