--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <h2 class="font-weight-light mb-0" id="userbasicinfo"></h2>
 		<h2 class="font-weight-light mb-0" id="usermessagecount"></h2>
 		<h2 class="font-weight-light mb-0" id="activitycount"></h2>
-		<h2 class="font-weight-light mb-0" id="browser">Browser: Unknown</h2>
-		<h2 class="font-weight-light mb-0" id="OS">OS: Unknown</h2>
+		<h2 class="font-weight-light mb-0" id="browser"></h2>
+		<h2 class="font-weight-light mb-0" id="OS"></h2>
       </div>
     </header>
     <br>
