--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body id="page-top" onload="myFunction('griffpatch')">
@@ -45,15 +45,15 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img id="userdisplaylogo" style="border-radius: 20px;"></img>
+        <img id="userdisplaylogo" style="border-radius: 20px;" alt="Logo"></img>
         <h1 class="text-uppercase mb-0" id="displayusername"></h1>
 		<h2 class="font-weight-light mb-0" id="dev"></h2>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0" id="userbasicinfo"></h2>
-		<h2 class="font-weight-light mb-0" id="usermessagecount"></h2>
-		<h2 class="font-weight-light mb-0" id="activitycount"></h2>
-		<h2 class="font-weight-light mb-0" id="browser"></h2>
-		<h2 class="font-weight-light mb-0" id="OS"></h2>
+        <h2 class="font-weight-light mb-0" id="userbasicinfo">Basic Info</h2>
+		<h2 class="font-weight-light mb-0" id="usermessagecount">Unread Messages</h2>
+		<h2 class="font-weight-light mb-0" id="activitycount">Activity Count</h2>
+		<h2 class="font-weight-light mb-0" id="browser">Browser</h2>
+		<h2 class="font-weight-light mb-0" id="OS">OS</h2>
       </div>
     </header>
     <br>
