--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img id="userdisplaylogo" style="border-radius: 20px;" alt="Logo"></img>
+        <img id="userdisplaylogo" style="border-radius: 20px;"></img>
         <h1 class="text-uppercase mb-0" id="displayusername"></h1>
 		<h2 class="font-weight-light mb-0" id="dev"></h2>
         <hr class="star-light">
