--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 <input type="text" id="user" class="form-control form-control-lg" placeholder="griffpatch">
 </div>
 <div class="modal-footer bg-primary text-white justify-content-center">
-<button type="button" class="btn btn-light" onclick="loadUser(user.value);" data-dismiss="modal">OK</button>
+<button type="button" class="btn btn-light" onclick="loadUser(user.value, true);" data-dismiss="modal">OK</button>
 </div>
 </div>
 </div>
