--- a/index.html
+++ b/index.html
@@ -171,6 +171,34 @@ h1, h2, h3, h4, h5, h6 {
 <h4 id="tLoveName"></h4>
 <a id="tLoveHref" target="_blank"><img id="tLoveImg" style="border-radius: 20px;" class="mx-auto d-block"></img></a>
 </center>
+<br>
+</div>
+</div>
+</div>
+
+<div id="totalStats" class="container">
+<h2 class="text-center display-3">Total Stats</h2>
+<br>
+<div class="row">
+<div class="col-sm-3">
+<center>
+<h4 id="totViews"></h4>
+</center>
+</div>
+<div class="col-sm-3">
+<center>
+<h4 id="totLoves"></h4>
+</center>
+</div>
+<div class="col-sm-3">
+<center>
+<h4 id="totFavourites"></h4>
+</center>
+</div>
+<div class="col-sm-3">
+<center>
+<h4 id="totComments"></h4>
+</center>
 </div>
 </div>
 </div>
